# sdbus-cpp

./: .clang-format  .clang-tidy  .gitignore  .project  AUTHORS  CMakeLists.txt  COPYING-LGPL-Exception  ChangeLog  INSTALL  Makefile.am  NEWS  Notes.txt  README.md  configure.ac  sdbus-c++-config-version.cmake.in  sdbus-c++-config.cmake.in  sdbus-c++.pc.in
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
backup/docs/: Doxyfile.in  systemd-dbus-config.md  using-sdbus-c++.md
backup/include/sdbus-c++/: ConvenienceApiClasses.inl  Error.h  Flags.h  IConnection.h  IObject.h  IProxy.h  Message.h  ProxyInterfaces.h  TypeTraits.h  Types.h
backup/src/: Connection.cpp  Connection.h  Message.cpp  MessageUtils.h  Object.h  ScopeGuard.h  SdBus.h
backup/tests/: CMakeLists.txt
backup/tests/integrationtests/: DBusAsyncMethodsTests.cpp  DBusGeneralTests.cpp  DBusPropertiesTests.cpp  DBusSignalsTests.cpp  DBusStandardInterfacesTests.cpp  TestAdaptor.cpp  TestFixture.cpp  TestFixture.h  integrationtests-adaptor.h  integrationtests-proxy.h  org.sdbuscpp.integrationtests.xml
backup/tests/perftests/: client.cpp  org.sdbuscpp.perftests.xml  server.cpp
backup/tests/stresstests/: celsius-thermometer-adaptor.h  celsius-thermometer-proxy.h  concatenator-adaptor.h  concatenator-proxy.h  fahrenheit-thermometer-adaptor.h  org.sdbuscpp.stresstest.concatenator.xml  org.sdbuscpp.stresstest.fahrenheit.thermometer.xml
cmake/: LibsystemdExternalProject.cmake  clang-tidy.cmake  sdbus-c++-config.cmake.in
doc/: CMakeLists.txt  sdbus-c++-class-diagram.uml  systemd-dbus-config.md  using-sdbus-c++.md
docs/: CMakeLists.txt  Doxyfile.in  systemd-dbus-config.md  using-sdbus-c++.md
examples/: CMakeLists.txt
examples/org.freedesktop.DBus.ObjectManager/: examplemanager-planet1-client-glue.h  examplemanager-planet1-server-glue.h  obj-manager-client.cpp  obj-manager-server.cpp  org.sdbuscpp.ExampleManager.Planet1.xml
examples/org.freedesktop.DBus.ObjectManager/dbus-api/gen-cpp/: examplemanager-planet1-client-glue.h
include/: Makefile.am
include/sdbus-c++/: AdaptorInterfaces.h  AsyncResult.h  Awaitable.h  ConvenienceApiClasses.h  ConvenienceApiClasses.inl  ConvenienceClasses.h  ConvenienceClasses.inl  Error.h  Flags.h  IConnection.h  IObject.h  IObjectProxy.h  IProxy.h  Interfaces.h  Introspection.h  Message.h  MethodResult.h  MethodResult.inl  ProxyInterfaces.h  StandardInterfaces.h  TypeTraits.h  Types.h  VTableItems.h  VTableItems.inl  sdbus-c++.h
perftest/: client.cpp  perftest-adaptor.h  server.cpp
pkgconfig/: sdbus-c++.pc.in
src/: AsyncResult.cpp  Connection.cpp  Connection.h  ConvenienceApiClasses.cpp  ConvenienceClasses.cpp  Error.cpp  Flags.cpp  IConnection.h  ISdBus.h  Makefile.am  Message.cpp  MessageUtils.h  MethodResult.cpp  Object.cpp  Object.h  ObjectProxy.cpp  ObjectProxy.h  Proxy.cpp  Proxy.h  ScopeGuard.h  SdBus.cpp  SdBus.h  Types.cpp  Utils.h  VTableUtils.c  VTableUtils.h
stub-generator/: AdaptorGenerator.cpp  AdaptorGenerator.h  BaseGenerator.cpp  BaseGenerator.h  CMakeLists.txt  ProxyGenerator.cpp  ProxyGenerator.h  generator_utils.h  xml.cpp
test/: CMakeLists.txt  Makefile.am
test/googletest-download/: CMakeLists.txt.in
test/integrationtests/: AdaptorAndProxy_test.cpp  Connection_test.cpp  TestingAdaptor.h  TestingProxy.h  adaptor-glue.h  defs.h  libsdbus-c++_integrationtests.cpp  proxy-glue.h
test/integrationtests/files/: libsdbus-cpp-test.conf
test/perftests/: CMakeLists.txt  client.cpp  org.sdbuscpp.perftest.xml  perftest-adaptor.h  perftest-proxy.h  server.cpp
test/perftests/files/: org.sdbuscpp.perftest.conf
test/stresstests/: celsius-thermometer-adaptor.h  celsius-thermometer-proxy.h  concatenator-adaptor.h  concatenator-proxy.h  fahrenheit-thermometer-adaptor.h  fahrenheit-thermometer-proxy.h  org.sdbuscpp.stresstest.celsius.thermometer.xml  org.sdbuscpp.stresstest.concatenator.xml  org.sdbuscpp.stresstest.fahrenheit.thermometer.xml  sdbus-c++-stress-tests.cpp  stresstests.cpp
test/stresstests/files/: org.sdbuscpp.stresstest.conf
test/unittests/: Connection_test.cpp  Message_test.cpp  TypeTraits_test.cpp  Types_test.cpp  libsdbus-c++_unittests.cpp  sdbus-c++-unit-tests.cpp
test/unittests/mocks/: SdBusMock.h
tests/: CMakeLists.txt
tests/googletest-download/: CMakeLists.txt.in
tests/integrationtests/: AdaptorAndProxy_test.cpp  Connection_test.cpp  DBusAsyncMethodsTests.cpp  DBusAwaitableMethodsTests.cpp  DBusConnectionTests.cpp  DBusGeneralTests.cpp  DBusMethodsTests.cpp  DBusPropertiesTests.cpp  DBusSignalsTests.cpp  DBusStandardInterfacesTests.cpp  Defs.h  TestAdaptor.cpp  TestAdaptor.h  TestFixture.cpp  TestFixture.h  TestProxy.cpp  TestProxy.h  TestingAdaptor.h  TestingProxy.h  adaptor-glue.h  defs.h  integrationtests-adaptor.h  integrationtests-proxy.h  org.sdbuscpp.integrationtests.xml  proxy-glue.h  sdbus-c++-integration-tests.cpp
tests/integrationtests/files/: org.sdbuscpp.integrationtests.conf
tests/perftests/: client.cpp  perftests-adaptor.h  perftests-proxy.h  server.cpp
tests/perftests/files/: org.sdbuscpp.perftests.conf
tests/stresstests/: celsius-thermometer-adaptor.h  celsius-thermometer-proxy.h  concatenator-adaptor.h  concatenator-proxy.h  fahrenheit-thermometer-adaptor.h  fahrenheit-thermometer-proxy.h  org.sdbuscpp.stresstest.celsius.thermometer.xml  sdbus-c++-stress-tests.cpp
tests/stresstests/dbus-api/gen-cpp/: celsius-thermometer-proxy.h  concatenator-adaptor.h  fahrenheit-thermometer-proxy.h
tests/stresstests/files/: org.sdbuscpp.stresstests.conf
tests/unittests/: Connection_test.cpp  Message_test.cpp  PollData_test.cpp  TypeTraits_test.cpp  Types_test.cpp  sdbus-c++-unit-tests.cpp
tests/unittests/mocks/: SdBusMock.h
tools/: CMakeLists.txt
tools/cmake/: sdbus-c++-tools-config.cmake.in
tools/pkgconfig/: sdbus-c++-tools.pc.in
tools/xml2cpp-codegen/: AdaptorGenerator.cpp  AdaptorGenerator.h  BaseGenerator.cpp  BaseGenerator.h  ProxyGenerator.cpp  ProxyGenerator.h  generator_utils.cpp  generator_utils.h  reserved_names.h  xml.cpp  xml.h  xml2cpp.cpp
(+4 files in other folders)
