
# Distribution
# Headers will be installed to $(includedir)/sdbus-c++ directory

HEADER_DIR = sdbus-c++
libsdbuscppdir = $(includedir)/$(HEADER_DIR)
libsdbuscpp_HEADERS = \
	$(HEADER_DIR)/ConvenienceClasses.h \
	$(HEADER_DIR)/ConvenienceClasses.inl \
	$(HEADER_DIR)/Error.h \
	$(HEADER_DIR)/IConnection.h \
	$(HEADER_DIR)/Interfaces.h \
	$(HEADER_DIR)/Introspection.h \
	$(HEADER_DIR)/IObject.h \
	$(HEADER_DIR)/IObjectProxy.h \
	$(HEADER_DIR)/Message.h \
	$(HEADER_DIR)/AsyncResult.h \
	$(HEADER_DIR)/Types.h \
	$(HEADER_DIR)/TypeTraits.h \
	$(HEADER_DIR)/sdbus-c++.h

EXTRA_DIST = ($libsdbuscpp_HEADERS)

DISTCLEANFILES = Makefile Makefile.in
